--- a/services/package.json
+++ b/services/package.json
@@ -25,12 +25,16 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.6.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.1",
+    "@types/passport-local": "^1.0.33",
     "apollo-server-express": "^2.16.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.16",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
