--- a/services/package.json
+++ b/services/package.json
@@ -32,6 +32,7 @@
     "apollo-server-express": "^2.16.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.16",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
