--- a/services/package.json
+++ b/services/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.6.0",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.1",
@@ -33,6 +34,7 @@
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.16",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.2",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
