--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "^6.1.0",
+    "sass": "^1.32.8",
+    "sass-loader": "8.0.0",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
