--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.8"
+    "vuetify": "^2.4.8",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
