--- a/services/.example.env
+++ b/services/.example.env
@@ -2,6 +2,8 @@ APP_PORT='3001'
 
 DB_NAME='test'
 DB_HOST='localhost'
-DB_PORT='3306'
-DB_ROOT_USER='root'
-DB_ROOT_PASS='root1234'
+# 須對到 docker db port
+DB_PORT=''
+# 須對到 docker db user, pass
+DB_ROOT_USER=''
+DB_ROOT_PASS=''
